--- a/web1-normal.html
+++ b/web1-normal.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Web-Dev Task 1: Normal Mode</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="webdev1.css-normal.css">
     </head>
     <body>
         <div class="score">
@@ -55,6 +55,6 @@
                 moveSnakeD();
             "><img src="scroll-down.jpg" class="img"></button>
         </div>
-        <script src="javascript.js"></script>
+        <script src="webdev1.js-normal.js"></script>
     </body>
 </html>
